--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 		<link rel="stylesheet" href="style/style.css" />
 	</head>
 	<body class="container">
+		<input type="text" id="number1" />
+		<input type="text" id="number2" />
+
+		<button onClick="increment()">+</button>
+		<button onClick="decrement()">-</button>
+
+		<div
+			id="currentValue"
+			style="height: 30px; width: 100px; border: 1px solid red"
+		></div>
 		<script src="js/index.js"></script>
 	</body>
 </html>
